--- a/HTML/login.html
+++ b/HTML/login.html
@@ -49,7 +49,7 @@
       </div>
     </div>
 		<p>
-				<button onclick="topFunction()" class="hide" id="scrollUp">&#x2b06;</button>
+				<button onclick="topFunction()" class="hide" id="scrollUp">&#9650;</button>
 		</p>
     <footer></footer>
   </body>
