--- a/HTML/noleggioAcquista.html
+++ b/HTML/noleggioAcquista.html
@@ -38,7 +38,7 @@
 			</div>
 
 			<p>
-				<button aria-label="Torna in cima" onclick="topFunction()" class="hide" id="scrollUp">&#9650;</button>
+				<button aria-label="Torna in cima" onclick="topFunction()" onkeypress="topFunction()" class="hide" id="scrollUp">&#9650;</button>
 			</p>
 		</div>
 		<footer></footer>
